--- a/wineshare/src/main/resources/static/stylesheets/shortcodes.css
+++ b/wineshare/src/main/resources/static/stylesheets/shortcodes.css
@@ -893,7 +893,7 @@
 }
 
 .flat-carousel-box .team-title {
-    padding: 27px 32px 19px;
+    /*padding: 27px 32px 19px;*/
     display: inline-block;
     background-color: #fff;
     margin-bottom: 23px;
