--- a/wineshare/src/main/resources/templates/main.html
+++ b/wineshare/src/main/resources/templates/main.html
@@ -67,7 +67,7 @@
                              data-splitin="none"
                              data-splitout="none"
                              data-paddingleft= "['3','3','3','3']"
-                             data-responsive_offset="on">Welcome to Wizym</div>
+                             data-responsive_offset="on">Welcome to Wine Share</div>
 
                         <div class="tp-caption tp-resizeme font-rubik font-weight-700 best"
                              data-x="['left','left','left','center']" data-hoffset="['-4','-4','-4','0']"
@@ -85,7 +85,7 @@
                              data-start="1000"
                              data-splitin="none"
                              data-splitout="none"
-                             data-responsive_offset="on">Best Of Wine Store</div>
+                             data-responsive_offset="on">Best Of Wine Site</div>
 
                         <div class="tp-caption tp-resizeme text-white font-rubik font-weight-400 text-wizym"
                              data-x="['left','left','left','center']" data-hoffset="['0','-2','-2','0']"
@@ -104,7 +104,7 @@
                              data-splitin="none"
                              data-splitout="none"
                              data-responsive_offset="on"
-                             data-paddingright="['550','155','50','2']" >Wizym offers extensive collections of over 2,000 unique wines from prestigious brands to family-owed wineries </div>
+                             data-paddingright="['550','155','50','2']" >이곳에선 다양한 와인 정보와 전문가의 의견을 접할 수 있고,<br> 다른 사람들과의 경험을 공유할 수 있습니다</div>
 
                         <div class="tp-caption"
                              data-x="['left','left','left','center']" data-hoffset="['0','-4','-4','0']"
@@ -149,7 +149,7 @@
                              data-splitin="none"
                              data-splitout="none"
                              data-paddingleft= "['3','3','3','3']"
-                             data-responsive_offset="on">Welcome to Wizym  </div>
+                             data-responsive_offset="on">Welcome to Wine Share  </div>
 
                         <div class="tp-caption tp-resizeme font-rubik font-weight-700 best"
                              data-x="['left','left','left','center']" data-hoffset="['-4','-4','-4','0']"
@@ -167,7 +167,7 @@
                              data-start="1000"
                              data-splitin="none"
                              data-splitout="none"
-                             data-responsive_offset="on">Best Of Wine Store</div>
+                             data-responsive_offset="on">Best Of Wine Site</div>
 
                         <div class="tp-caption tp-resizeme text-white font-rubik font-weight-400 text-wizym"
                              data-x="['left','left','left','center']" data-hoffset="['0','-2','-2','0']"
@@ -186,7 +186,7 @@
                              data-splitin="none"
                              data-splitout="none"
                              data-responsive_offset="on"
-                             data-paddingright="['550','155','50','2']" >Wizym offers extensive collections of over 2,000 unique wines from prestigious brands to family-owed wineries </div>
+                             data-paddingright="['550','155','50','2']" >다양한 프로모션과 특별한 행사들을 경험해보세요</div>
 
                         <div class="tp-caption"
                              data-x="['left','left','left','center']" data-hoffset="['0','-4','-4','0']"
@@ -373,7 +373,7 @@
                                 <div class="team-member" th:each="market, status : ${newMarkets}">
                                     <div class="team-border">
                                         <div class="team-title">
-                                            <img th:src="${market.marketImgUrl}" alt="image" style="height: 100px; width: 100px;">
+                                            <img th:src="${market.marketImgUrl}" alt="image" style="height: 200px; width: 200px;">
                                         </div>
                                         <div class="team-meta">
                                             <span th:text="${market.marketCategory}">플레이스 카테고리</span>
