--- a/wineshare/src/main/resources/templates/admin/dataList.html
+++ b/wineshare/src/main/resources/templates/admin/dataList.html
@@ -150,7 +150,7 @@
                         <td>${marketing.id}</td>
                         <td>${marketing.marketCategory}</td>
                         <td>
-                            <a href="/marketings/${marketing.marketCategory}/new/${marketing.id}">
+                            <a href="/marketings/${marketing.marketCategory}/modify/${marketing.id}">
                                 ${marketing.marketingTitle}
                             </a>
                         </td>
