--- a/wineshare/src/main/resources/static/wineshare-css/board-list.css
+++ b/wineshare/src/main/resources/static/wineshare-css/board-list.css
@@ -22,7 +22,8 @@ a {
      width:80%;
      border: 1px solid #e5e5e5;
      margin: 0 auto;
-     margin-top: 3%;
+     margin-top: 1%;
+     margin-bottom: 3%;
      padding: 20px;
     position:relative;
 }
