관리자 회원가입!

--- a/wineshare/src/main/resources/static/stylesheets/style.css
+++ b/wineshare/src/main/resources/static/stylesheets/style.css
@@ -8775,6 +8775,9 @@ footer.style3 .footer-widgets .widget-text span {
 	height: 47px;
 }
 
+.blog-pagination .flat-pagination .hvr-shutter-out-horizontal {
+	cursor: pointer;
+}
 
 
 
