--- a/wineshare/src/main/resources/templates/cellar/cellarList.html
+++ b/wineshare/src/main/resources/templates/cellar/cellarList.html
@@ -19,6 +19,9 @@
     .page-active {
       background-color: #c02323 !important;
     }
+    th, td {
+      cursor: default;
+    }
     .cellar-wine-img {
       height: 150px;
       width: auto;
@@ -35,6 +38,7 @@
       left: 50%;
       top: 50%;
       transform: translate(-50%, -50%);
+      cursor: pointer;
     }
   </style>
 </th:block>
