--- a/wineshare/src/main/resources/templates/fragments/header.html
+++ b/wineshare/src/main/resources/templates/fragments/header.html
@@ -33,17 +33,17 @@
               </li>
 
               <li class="active">
-                <a class="mouse-pointer">About Us</a>
+                <a class="mouse-pointer">About us</a>
                 <ul class="sub-menu">
-                  <li><a th:href="@{'/about/aboutUs'}" title="">Wine Share</a></li>
-                  <li><a th:href="@{'/boards/notice/list'}" title="notice">공지사항</a></li>
+                  <li><a th:href="@{'/about/aboutUs'}" title="">Wineshare</a></li>
+                  <li><a th:href="@{'/boards/notice/list'}" title="notice">Notice</a></li>
 
                 </ul><!-- /.sub-menu -->
               </li>
 
 
               <li class="active">
-                <a th:href="@{'/wines/list'}" title="Wine List">Wine</a>
+                <a th:href="@{'/wines/list'}" title="Wine List">Wines</a>
                 <ul class="sub-menu">
                   <!--                                    <li class="active"><a href="main.html" title="">Red</a></li>-->
                   <li><a th:href="@{'/wines/list/0?searchWineType=RED'}" title="Wine List-RED">RED</a></li>
@@ -55,7 +55,7 @@
                 </ul><!-- /.sub-menu -->
               </li>
               <li class="active">
-                <a class="mouse-pointer">Marketing</a>
+                <a class="mouse-pointer">Places</a>
                 <ul class="sub-menu">
                   <li><a th:href="@{'/marketings/winebar/list'}" title="">Wine Bar</a></li>
                   <li><a th:href="@{'/marketings/bottleshop/list'}" title="">Bottle Shop</a></li>
