--- a/wineshare/src/main/resources/templates/marketing/marketingList.html
+++ b/wineshare/src/main/resources/templates/marketing/marketingList.html
@@ -62,18 +62,21 @@
 
 <div layout:fragment="content">
 
+    <div id="loading-overlay">
+        <div class="loader"></div>
+    </div> <!-- /.loading-overlay -->
     <!-- 각 페이지 상단에 경로 나타내주는 부분.. -->
     <div class="page-title parallax parallax1">
         <div class="container">
             <div class="page-title-content d-sm-flex justify-content-sm-between align-items-center text-center">
                 <div class="breadcrumbs">
                     <ul>
-                        <li><a href="#">Home</a></li>
-                        <li class="blog"><a href="#">Marketing</a></li>
+                        <li><a>Home</a></li>
+                        <li class="blog"><a>Places</a></li>
                     </ul>
                 </div>
                 <div class="page-title-heading">
-                    <h2 class="title" th:text="${marketCategory}"><a href="#">Marketing</a></h2>
+                    <h2 class="title" th:text="${marketCategory}"></h2>
                 </div>
             </div>
         </div>
@@ -144,8 +147,8 @@
                                 <span>비워둘까?</span>
                             </div>
 
-                            <div class="market-post-content" th:text="${marketingDTO.marketingContent}">
-                                <span>업장 소개</span>
+                            <div class="market-post-content">
+                                <pre th:text="${marketingDTO.marketingContent}"></pre>
                             </div>
 
 
