--- a/wineshare/src/main/resources/templates/wine/wineList.html
+++ b/wineshare/src/main/resources/templates/wine/wineList.html
@@ -206,17 +206,19 @@
                 <div class="page-title-content d-sm-flex justify-content-sm-between align-items-center text-center">
                     <div class="breadcrumbs">
                         <ul>
-                            <li><a href="#">Home</a></li>
-                            <li><a href="#">Product</a></li>
-                            <li class="blog"><a href="#">Shop Full Width</a></li>
+                            <li><a>Home</a></li>
+                            <li class="blog"><a>Wines</a></li>
                         </ul>
                     </div>
                     <div class="page-title-heading">
-                        <h2 class="title"><a href="#">ARCHIVES PRODUCTS</a></h2>
+                        <h2 class="title"><a>WINES</a></h2>
                     </div>
                 </div>
             </div>
         </div> <!-- /.page-title -->
+        <div id="loading-overlay">
+            <div class="loader"></div>
+        </div> <!-- /.loading-overlay -->
 
 
         <div th:object="${wineSearchDTO}">
