--- a/wineshare/src/main/resources/templates/admin/dataChoiList.html
+++ b/wineshare/src/main/resources/templates/admin/dataChoiList.html
@@ -31,10 +31,6 @@
 
         }
 
-        .data-title{
-            left: 30px;
-        }
-
 
 
     </style>
@@ -50,8 +46,27 @@
 
 <div layout:fragment="content">
 
+    <div id="loading-overlay">
+        <div class="loader"></div>
+    </div> <!-- /.loading-overlay -->
+    <!-- 각 페이지 상단에 경로 나타내주는 부분.. -->
+    <div class="page-title parallax parallax1">
+        <div class="container">
+            <div class="page-title-content d-sm-flex justify-content-sm-between align-items-center text-center">
+                <div class="breadcrumbs">
+                    <ul>
+                        <li><a>Home</a></li>
+                        <li class="blog"><a>Admin dashboard</a></li>
+                    </ul>
+                </div>
+                <div class="page-title-heading">
+                    <h2 class="title"><a>ADMIN DASHBOARD</a></h2>
+                </div>
+            </div>
+        </div>
+    </div> <!-- /.page-title -->
+
     <div class="data-container">
-        <h2 class="data-title">관리자용 데이터 대시보드</h2>
         <div class="data-btn">
             <button type="button" onclick="location.href='/admins/members/list'" class="btn text-white" >회원</button>
             <button type="button" onclick="location.href='/admins/wines/list'" class="btn text-white" >와인</button>
