--- a/wineshare/src/main/resources/templates/board/boardForm.html
+++ b/wineshare/src/main/resources/templates/board/boardForm.html
@@ -51,6 +51,29 @@
 
 
 <div layout:fragment="content">
+
+    <div id="loading-overlay">
+        <div class="loader"></div>
+    </div> <!-- /.loading-overlay -->
+
+    <!-- 각 페이지 상단에 경로 나타내주는 부분.. -->
+    <div class="page-title parallax parallax1">
+        <div class="container">
+            <div class="page-title-content d-sm-flex justify-content-sm-between align-items-center text-center">
+                <div class="breadcrumbs">
+                    <ul>
+                        <li><a>Home</a></li>
+                        <li><a>Boards</a></li>
+                        <li class="blog"><a>Register</a></li>
+                    </ul>
+                </div>
+                <div class="page-title-heading">
+                    <h2 class="title" th:text="${boardStatus} + ' BOARD REGISTER'"></h2>
+                </div>
+            </div>
+        </div>
+    </div> <!-- /.page-title -->
+
     <div class="board-form">
         <form role="form" method="post" th:object="${boardDTO}" enctype="multipart/form-data">
             <input type="hidden" th:field="*{id}">
@@ -59,9 +82,6 @@
                 <div class="col-lg-12">
                     <div class="panel panel-default">
 
-                        <div th:text="${boardStatus} + ' Board Register'" class="form-title">
-                            Board Register
-                        </div>
 
 
                         <div class="form-body">
