--- a/wineshare/src/main/resources/templates/board/boardGetForm.html
+++ b/wineshare/src/main/resources/templates/board/boardGetForm.html
@@ -152,16 +152,16 @@
                     data.boardReplys.forEach(function (reply){
                         console.log(reply.memberId);
                         const item = `
-<div class="reply-content">
-<div class="avatar">
-<img src="/wineshare-img/people.png" alt="image" class="profile_img">
-</div>
-<div class="post-comment" id="post-reply-${reply.id}">
-<div class="comment-title comment">${reply.replyNickname}</div>
-<div class="comment-text comment" id="comment-reply-${reply.id}">${reply.reply}</div>
-${createBtns(reply.memberId, reply.id)}
-</div>
-</div>`;
+                                        <div class="reply-content">
+                                        <div class="avatar">
+                                        <img src="/wineshare-img/people.png" alt="image" class="profile_img">
+                                        </div>
+                                        <div class="post-comment" id="post-reply-${reply.id}">
+                                        <div class="comment-title comment">${reply.replyNickname}</div>
+                                        <div class="comment-text comment" id="comment-reply-${reply.id}"><pre>${reply.reply}</pre></div>
+                                        ${createBtns(reply.memberId, reply.id)}
+                                        </div>
+                                        </div>`;
                         boardReplyListContainer.append(item);
                         const commentForm = document.getElementById("comment-respond-reply");
                         commentForm.className = "reply-form";
@@ -304,19 +304,23 @@ ${createBtns(reply.memberId, reply.id)}
 
 <div layout:fragment="content">
 
+    <div id="loading-overlay">
+        <div class="loader"></div>
+    </div> <!-- /.loading-overlay -->
+
     <!-- 각 페이지 상단에 경로 나타내주는 부분.. -->
     <div class="page-title parallax parallax1">
         <div class="container">
             <div class="page-title-content d-sm-flex justify-content-sm-between align-items-center text-center">
                 <div class="breadcrumbs">
                     <ul>
-                        <li><a href="#">Home</a></li>
-                        <li><a href="#">Product</a></li>
-                        <li class="blog"><a href="#">Boards</a></li>
+                        <li><a>Home</a></li>
+                        <li><a>Boards</a></li>
+                        <li class="blog"><a>Details</a></li>
                     </ul>
                 </div>
                 <div class="page-title-heading">
-                    <h2 class="title" th:text="${boardStatus} + ' Board'"><a href="#">Board</a></h2>
+                    <h2 class="title" th:text="${boardStatus} + ' BOARD DETAILS'"></h2>
                 </div>
             </div>
         </div>
@@ -330,9 +334,8 @@ ${createBtns(reply.memberId, reply.id)}
             <div class="row">
                 <div class="col-lg-12">
                     <div class="panel panel-default">
-                        <div th:text="${boardStatus}" id="boardStatus" th:data-board-status="${boardStatus}"
+                        <div id="boardStatus" th:data-board-status="${boardStatus}"
                              class="form-title">
-                            상세보기
                         </div>
                     </div>
                 </div>
@@ -381,7 +384,9 @@ ${createBtns(reply.memberId, reply.id)}
 
                                 <tr>
                                     <th>내용</th>
-                                    <td><div th:field="*{boardContent}" th:text="*{boardContent}"></div></td>
+                                    <td>
+                                        <pre><p th:field="*{boardContent}" th:text="*{boardContent}"></p></pre>
+                                    </td>
                                 </tr>
 
                                 <tr>
