--- a/wineshare/src/main/resources/templates/board/boardList.html
+++ b/wineshare/src/main/resources/templates/board/boardList.html
@@ -96,19 +96,22 @@
 
 
 <div layout:fragment="content" class="content">
+
+    <div id="loading-overlay">
+        <div class="loader"></div>
+    </div> <!-- /.loading-overlay -->
     <!-- 각 페이지 상단에 경로 나타내주는 부분.. -->
     <div class="page-title parallax parallax1">
         <div class="container">
             <div class="page-title-content d-sm-flex justify-content-sm-between align-items-center text-center">
                 <div class="breadcrumbs">
                     <ul>
-                        <li><a href="#">Home</a></li>
-                        <li><a href="#">Product</a></li>
-                        <li class="blog"><a href="#">Boards</a></li>
+                        <li><a>Home</a></li>
+                        <li class="blog"><a>Boards</a></li>
                     </ul>
                 </div>
                 <div class="page-title-heading">
-                    <h2 class="title" th:text="${boardStatus} + ' Board'"><a href="#">Board</a></h2>
+                    <h2 class="title" th:text="${boardStatus} + ' BOARD'"></h2>
                 </div>
             </div>
         </div>
