--- a/wineshare/src/main/resources/templates/cellar/cellarList.html
+++ b/wineshare/src/main/resources/templates/cellar/cellarList.html
@@ -192,20 +192,21 @@
 
 <div layout:fragment="content" >
 
-
+  <div id="loading-overlay">
+    <div class="loader"></div>
+  </div> <!-- /.loading-overlay -->
     <!-- 각 페이지 상단에 경로 나타내주는 부분.. -->
     <div class="page-title parallax parallax1">
       <div class="container">
         <div class="page-title-content d-sm-flex justify-content-sm-between align-items-center text-center">
           <div class="breadcrumbs">
             <ul>
-              <li><a href="#">Home</a></li>
-              <li><a href="#">Product</a></li>
-              <li class="blog"><a href="#">Wish List</a></li>
+              <li><a>Home</a></li>
+              <li class="blog"><a>My Cellar</a></li>
             </ul>
           </div>
           <div class="page-title-heading">
-            <h2 class="title"><a href="#">Wish List</a></h2>
+            <h2 class="title"><a>MY CELLAR</a></h2>
           </div>
         </div>
       </div>
