--- a/wineshare/src/main/resources/templates/main.html
+++ b/wineshare/src/main/resources/templates/main.html
@@ -38,6 +38,9 @@
 </th:block>
 
 <div layout:fragment="content">
+    <div id="loading-overlay">
+        <div class="loader"></div>
+    </div> <!-- /.loading-overlay -->
     <div class="flat-slider style1">
         <!-- SLIDER -->
         <div class="rev_slider_wrapper fullwidthbanner-container" >
