--- a/wineshare/src/main/resources/templates/marketing/marketingForm.html
+++ b/wineshare/src/main/resources/templates/marketing/marketingForm.html
@@ -61,19 +61,22 @@
 
 
 <div layout:fragment="content">
-
+    <div id="loading-overlay">
+        <div class="loader"></div>
+    </div> <!-- /.loading-overlay -->
     <!-- 각 페이지 상단에 경로 나타내주는 부분.. -->
     <div class="page-title parallax parallax1">
         <div class="container">
             <div class="page-title-content d-sm-flex justify-content-sm-between align-items-center text-center">
                 <div class="breadcrumbs">
                     <ul>
-                        <li><a href="#">Home</a></li>
-                        <li class="blog"><a href="#">Marketing & Event</a></li>
+                        <li><a>Home</a></li>
+                        <li><a>Places</a></li>
+                        <li class="blog"><a>Register</a></li>
                     </ul>
                 </div>
                 <div class="page-title-heading">
-                    <h2 class="title"><a href="#">Marketing & Event</a></h2>
+                    <h2 class="title" th:text="${marketCategory} + ' REGISTER'"></h2>
                 </div>
             </div>
         </div>
@@ -81,7 +84,7 @@
 
 
     <div class="marketing-form">
-        <h1 class="marketing-form-title">Marketing & Event</h1>
+        <h1 class="marketing-form-title"> </h1>
 
         <!-- 타임리프를 사용한 와인 등록 폼 -->
         <form role="form" method="post" class="marketingForm" th:object="${marketingDTO}" enctype="multipart/form-data">
