--- a/wineshare/src/main/resources/templates/member/memberAgree.html
+++ b/wineshare/src/main/resources/templates/member/memberAgree.html
@@ -63,7 +63,26 @@
 
 
 <div layout:fragment="content">
-
+  <div id="loading-overlay">
+    <div class="loader"></div>
+  </div> <!-- /.loading-overlay -->
+  <!-- 각 페이지 상단에 경로 나타내주는 부분.. -->
+  <div class="page-title parallax parallax1">
+    <div class="container">
+      <div class="page-title-content d-sm-flex justify-content-sm-between align-items-center text-center">
+        <div class="breadcrumbs">
+          <ul>
+            <li><a>Home</a></li>
+            <li><a>Members</a></li>
+            <li class="blog"><a>Agree</a></li>
+          </ul>
+        </div>
+        <div class="page-title-heading">
+          <h2 class="title"><a>AGREE</a></h2>
+        </div>
+      </div>
+    </div>
+  </div> <!-- /.page-title -->
 
     <div class="terms_sec">
       <div class="temrs_sec_field">
