--- a/wineshare/src/main/resources/templates/member/memberForm.html
+++ b/wineshare/src/main/resources/templates/member/memberForm.html
@@ -60,6 +60,27 @@
 
 <div layout:fragment="content">
 
+    <div id="loading-overlay">
+        <div class="loader"></div>
+    </div> <!-- /.loading-overlay -->
+    <div class="page-title parallax parallax1">
+        <div class="container">
+            <div class="page-title-content d-sm-flex justify-content-sm-between align-items-center text-center">
+                <div class="breadcrumbs">
+                    <ul>
+                        <li><a>Home</a></li>
+                        <li><a>Members</a></li>
+                        <th:block></th:block>
+                        <li class="blog"><a th:text="${memberDTO.id != null ? 'Modify' : 'Join us'}">Join us</a></li>
+                    </ul>
+                </div>
+                <div class="page-title-heading">
+                    <h2 class="title"><a th:text="${memberDTO.id != null ? 'MODIFY' : 'JOIN US'}">JOIN US</a></h2>
+                </div>
+            </div>
+        </div>
+    </div> <!-- /.page-title -->
+
 
     <div class="account-container">
 
