--- a/wineshare/src/main/resources/templates/member/memberLoginForm.html
+++ b/wineshare/src/main/resources/templates/member/memberLoginForm.html
@@ -44,12 +44,29 @@
 
 
 <div layout:fragment="content">
+
+    <div class="page-title parallax parallax1">
+        <div class="container">
+            <div class="page-title-content d-sm-flex justify-content-sm-between align-items-center text-center">
+                <div class="breadcrumbs">
+                    <ul>
+                        <li><a>Home</a></li>
+                        <li><a>Members</a></li>
+                        <li class="blog"><a>Log in</a></li>
+                    </ul>
+                </div>
+                <div class="page-title-heading">
+                    <h2 class="title"><a>LOG IN</a></h2>
+                </div>
+            </div>
+        </div>
+    </div> <!-- /.page-title -->
+
     <div id="loading-overlay">
         <div class="loader"></div>
     </div> <!-- /.loading-overlay -->
 
     <div class="login-form-container">
-        <!-- 로고 이미지 경로를 타임리프를 사용해 동적으로 설정 -->
         <h1 class="login-header">Log in</h1>
 
         <form action="/members/login" role="form" method="post" class="login-form">
