--- a/wineshare/src/main/resources/templates/wine/wineModify.html
+++ b/wineshare/src/main/resources/templates/wine/wineModify.html
@@ -84,17 +84,24 @@
     <div class="container">
       <div class="page-title-content d-sm-flex justify-content-sm-between align-items-center text-center">
         <div class="breadcrumbs">
-
+          <ul>
+            <li><a>Home</a></li>
+            <li><a>Wines</a></li>
+            <li class="blog"><a>Modify</a></li>
+          </ul>
         </div>
         <div class="page-title-heading">
-          <h2 class="title">Admin Wine Data</h2>
+          <h2 class="title"><a>WINE MODIFY</a></h2>
         </div>
       </div>
     </div>
   </div> <!-- /.page-title -->
+  <div id="loading-overlay">
+    <div class="loader"></div>
+  </div> <!-- /.loading-overlay -->
 
   <div class="wine-form">
-    <h1 class="wine-form-title">Wine Register</h1>
+    <h1 class="wine-form-title"> </h1>
 
     <!-- 타임리프를 사용한 와인 등록 폼 -->
     <form class="wineForm" id="wineForm" th:object="${wine}" enctype="multipart/form-data">
