--- a/wineshare/src/main/resources/templates/marketing/marketingForm.html
+++ b/wineshare/src/main/resources/templates/marketing/marketingForm.html
@@ -86,6 +86,13 @@
         <!-- 타임리프를 사용한 와인 등록 폼 -->
         <form role="form" method="post" class="marketingForm" th:object="${marketingDTO}" enctype="multipart/form-data">
 
+            <!-- 업장 분류 선택 -->
+            <div class="form-group">
+                <label th:for="marketCategory">업장 분류</label>
+<!--                <input type="text" th:field="${marketCategory}" th:text="${marketCategory}" readonly>-->
+                <div th:text="${marketCategory}"></div>
+            </div>
+
             <!-- 업장명 입력 -->
             <div class="form-group">
                 <label th:for="marketingTitle">업장명</label>
@@ -120,22 +127,6 @@
 
             </div>
 
-            <!-- 업장 분류 선택 -->
-            <div class="form-group">
-                <label th:for="marketCategory">업장 분류</label>
-                <input type="text" th:field="*{marketCategory}" readonly>
-<!--                <select th:field="*{marketCategory}" >-->
-<!--                    <option value="WineBar">Wine Bar</option>-->
-<!--                    <option value="BottleShop">Bottle Shop</option>-->
-<!--                    <option value="Bistro">Bistro</option>-->
-<!--                </select>-->
-            </div>
-
-<!--            &lt;!&ndash; 업장 사장 이름 입력 &ndash;&gt;-->
-<!--            <div class="form-group">-->
-<!--                <label th:for="ownerNickname">사업자</label>-->
-<!--                <input th:field="*{ownerNickname}" type="text" placeholder="업장자 이름을 입력해주세요." required/>-->
-<!--            </div>-->
 
             <!-- 행사 상태 선택 -->
             <div class="form-group">
@@ -154,7 +145,7 @@
             <!-- 행사상태가 1이면 활성화 (행사내용 입력) -->
             <div class="form-group" id="eventContentGroup">
                 <label th:for="eventContent">행사 내용</label>
-                <textarea class="form-control" th:field="*{eventContent}" placeholder="행사내용을 입력해주세요." style="resize: none">
+                <textarea class="form-control" th:field="*{eventContent}" placeholder="행사내용을 20자 이내로 입력해주세요." style="resize: none" maxlength="20">
                 </textarea>
             </div>
 
