자잘자잘한거

--- a/wineshare/src/main/resources/templates/marketing/marketingList.html
+++ b/wineshare/src/main/resources/templates/marketing/marketingList.html
@@ -144,11 +144,11 @@
                             </div>
 
                             <div class="market-post-name" th:text="${marketingDTO.ownerNickname}">
-                                <span>비워둘까?</span>
+                                <span>대표 닉네임</span>
                             </div>
 
                             <div class="market-post-content">
-                                <pre th:text="${marketingDTO.marketingContent}"></pre>
+                                <span th:text="${marketingDTO.marketingContent}"></span>
                             </div>
 
 
