--- a/wineshare/src/main/resources/templates/about/aboutUs.html
+++ b/wineshare/src/main/resources/templates/about/aboutUs.html
@@ -108,7 +108,7 @@
               <div class="aroma-txt">
                 <p>와인 아로마 휠은 와인의 다양한 향과 맛을 시각적으로 표현한 도구로, 와인 테이스팅에서 매우 유용하게 사용됩니다. 이 휠은 와인의 향을 분류하고 이해하는 데 도움을 주며, 와인을 평가할 때 향을 체계적으로 분석할 수 있게 해줍니다.</p>
                 <br>
-                <p><h4>와인 아로마 휠의 구성</h4></p>
+                <p><h4 style="font-weight:bold;">와인 아로마 휠의 구성</h4></p>
                 <br>
                 <p>
                   <ol>
