--- a/wineshare/src/main/resources/templates/fragments/footer.html
+++ b/wineshare/src/main/resources/templates/fragments/footer.html
@@ -4,32 +4,24 @@
   <footer class="style3">
     <div class="container">
       <div class="footer-widgets">
-<!--        <div class="widget widget-logo">-->
-<!--          <img th:src="@{/image/logo.png}" alt="image" width="129" height="37" th:data-retina="@{/image/logo-2x.png}" data-width="147" data-height="21">-->
-<!--        </div> &lt;!&ndash; /widget-logo &ndash;&gt;-->
+
         <div class="widget widget-icon">
           <ul>
-            <li class="active"><a href="#"> <i class="fa fa-facebook" aria-hidden="true"></i> </a></li>
-            <li><a href="#"> <i class="fa fa-twitter" aria-hidden="true"></i> </a></li>
-            <li><a href="#"> <i class="fa fa-instagram" aria-hidden="true"></i> </a></li>
-            <li><a href="#"> <i class="fa fa-skype" aria-hidden="true"></i> </a></li>
-            <li><a href="#"> <i class="fa fa-wordpress" aria-hidden="true"></i></a></li>
+            <li><a> <i class="fa fa-facebook" aria-hidden="true"></i> </a></li>
+            <li><a> <i class="fa fa-twitter" aria-hidden="true"></i> </a></li>
+            <li><a> <i class="fa fa-instagram" aria-hidden="true"></i> </a></li>
+            <li><a> <i class="fa fa-skype" aria-hidden="true"></i> </a></li>
+            <li><a> <i class="fa fa-wordpress" aria-hidden="true"></i></a></li>
           </ul>
         </div> <!-- /widget-icon -->
-        <!--            <div class="widget widget-title">-->
-        <!--                 <h2>Get news & offers</h2>-->
-        <!--            </div> &lt;!&ndash; /widget-title &ndash;&gt;-->
-        <!--            <div class="widget widget-contact">-->
-        <!--                 <input type="search" id="search-footer" placeholder="Your Email" >-->
-        <!--                 <button type="submit"><i class="fa fa-location-arrow" aria-hidden="true"></i></button>-->
-        <!--            </div> &lt;!&ndash; /widget-contact &ndash;&gt;-->
+
         <div class="widget widget-menu">
           <ul>
-            <li class="active"><a href="About.html"> About Us </a></li>
-            <li><a href="Shop-fullwidth-grid.html"> Customer Service </a></li>
-            <li><a href="Homepage2.html"> Terms & Conditions </a></li>
-            <li><a href="Blog-grid-3column.html"> Privacy Policy </a></li>
-            <li class="contact"><a href="contact-1.html"> Contact </a></li>
+            <li><a> About us </a></li>
+            <li><a> Customer Service </a></li>
+            <li><a> Terms & Conditions </a></li>
+            <li><a> Privacy Policy </a></li>
+            <li><a> Contact </a></li>
           </ul>
         </div> <!-- /widget-about -->
         <div class="widget widget-text">
