--- a/wineshare/src/main/resources/templates/board/boardForm.html
+++ b/wineshare/src/main/resources/templates/board/boardForm.html
@@ -90,7 +90,7 @@
 
                                     <div class="form-group">
                                         <label th:for="boardStatus"></label>
-                                        <input type="text" class="form-control" th:field="*{boardStatus}" readonly>
+                                        <input type="hidden" class="form-control" th:field="*{boardStatus}" readonly>
 
                                     </div>
 
